# erx

./: .dockerignore  .env.example  .gitignore  .npmignore  BRAND.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  PRODUCT.md  PRODUCTION_REVIEW.md  README.md  SECURITY.md  compose.yaml  package-lock.json  package.json  pyproject.toml  server.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
clients/: README.md
clients/python/: README.md  erx_client.py  example.py  pyproject.toml
deploy/: collect-and-index.sh  egypt-research-collect.service  egypt-research-collect.timer  production.env
docs/: USAGE.md  accessibility.md  adoption-plan.md  architecture.md  completion-and-source-expansion-plan.md  eval-report-0.16.2.md  go-to-market.md  launch-announcement.md  launch-checklist.md  launch-content.md  operations.md  qa-report-0.16.0.md  reproducibility.md  retrieval-evaluation.md  roadmap.md  showcase.md  source-strategy.md  source-wave-1-report.md  threat-model.md
eval/: gold-pool-expanded.csv  gold-set-expanded.json  gold-set-high-grades.txt  gold-set-labeled.json  gold-set-v0.16.2.json  gold-set.json  labeled-high-grades-review.txt
examples/: README.md  mcp-client.mjs  python_quickstart.py  rest.sh
scripts/: build-pool.mjs  check-release.mjs  evaluate-retrieval.mjs  export-dataset.mjs
src/: backup.ts  catalog.ts  cli.ts  collection.ts  connectors.ts  evaluation.ts  exports.ts  ingestion.ts  knowledge.ts  landing.ts  live-data.ts  mcp.ts  pages.ts  pdf.ts  product.ts  retrieval.ts  schema.ts  source-audit.ts  source-http.ts  store.ts  text.ts  types.ts  (+2 more)
(+83 files in other folders)
