[project]
name = "egypt-research-mcp"
version = "0.3.0"
description = "Source-backed research infrastructure for Egyptian affairs exposed through MCP."
readme = "README.md"
license = "MIT"
authors = [{ name = "Ahmed Morsy", email = "vacrom414@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4==4.13.4",
  "feedparser==6.0.11",
  "httpx==0.28.1",
  "jinja2==3.1.6",
  "mcp[cli]==1.28.1",
  "uvicorn==0.51.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
  "pytest-cov==6.2.1",
  "ruff==0.15.21",
]

[project.scripts]
egypt-research-mcp = "egypt_research_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/egypt_research_mcp"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
filterwarnings = [
  "ignore:'count' is passed as positional argument:DeprecationWarning:feedparser.html",
]

[tool.coverage.run]
source = ["egypt_research_mcp"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
